// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnDemand TV Brand Page  Dark Mode Design - should match snapshot 1`] = `
.emotion-25 {
  width: 100%;
  padding-bottom: 2rem;
}

@supports (display:grid) {
  .emotion-25 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-25 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-25 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-25 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-25 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-25 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-25 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
}
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-25 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .emotion-25 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width:63rem) {
  .emotion-25 {
    width: 100%;
  }
}

@media (max-width:14.9375rem) {
  .emotion-18 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-18 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-18 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-18 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-18 {
    margin-right: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-18 {
    margin-right: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-18 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-18 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-18 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-18 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-18 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-18 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-18 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
}
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-7 {
  padding-bottom: 1rem;
}

@media (min-width:63rem) {
  .emotion-7 {
    padding-bottom: 1.5rem;
  }
}

@media (min-width:63rem) {
  .emotion-7 {
    margin: 2.5rem 0 0;
  }
}

@media (max-width:62.9375rem) {
  .emotion-7 {
    margin-top: 1rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-7 {
    margin: 1rem -1rem 0;
  }
}

@media (max-width:24.9375rem) {
  .emotion-7 {
    margin: 0.5rem -0.5rem 0;
  }
}

.emotion-4 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.emotion-2 {
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.emotion-16 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #F2F2F2;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-16 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-16 {
    font-size: 2.5rem;
    line-height: 3.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-16 {
    padding: 2.5rem 0;
  }
}

@media (max-width:62.9375rem) {
  .emotion-16 {
    padding: 0.5rem 0;
  }
}

@media (min-width:63rem) {
  .emotion-16 {
    padding: 1rem 0;
  }
}

.emotion-9 {
  display: inline-block;
  width: 100%;
  padding-bottom: 0.5rem;
  word-break: break-word;
}

@media (min-width:37.5rem) {
  .emotion-9 {
    padding-bottom: 0;
    word-break: break-word;
    line-height: 3.5rem;
  }
}

.emotion-13 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-13 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-13 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-22 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-22 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-22 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-22 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-22 {
    margin-right: 20%;
  }
}

@media (min-width:80rem) {
  .emotion-22 {
    margin-right: 40%;
  }
}

@supports (display:grid) {
  .emotion-22 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-22 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-22 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-22 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-22 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-22 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-22 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(10,1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
}
}

.emotion-20 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #F2F2F2;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-20 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-20 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (max-width:62.9375rem) {
  .emotion-20 {
    padding-bottom: 0.5rem;
  }
}

<div>
  <div>
    chartbeat
  </div>
  <noscript />
  <main
    class="emotion-24 emotion-25 emotion-19"
    dir="rtl"
    role="main"
  >
    <div
      class="emotion-18 emotion-19"
      dir="rtl"
    >
      <h1
        class="emotion-0 emotion-1"
        id="content"
        tabindex="-1"
      >
        نړۍ دا وخت, ۲۷ می ۲۰۲۰
      </h1>
      <div
        class="emotion-6 emotion-7 emotion-8"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <iframe
            allow="autoplay"
            allowfullscreen=""
            class="emotion-2 emotion-3"
            scrolling="no"
            src="https://test.bbc.com/ws/av-embeds/media/pashto/bbc_pashto_tv/w172xcldhhrdqgb/ps?morph_env=live"
            title="ویډیو پلیئر"
          />
          <noscript />
        </div>
      </div>
      <strong
        aria-hidden="true"
        class=" emotion-15 emotion-16 emotion-17"
      >
        <span
          class="emotion-9 emotion-10"
        >
          نړۍ دا وخت
        </span>
        <span
          class="emotion-0 emotion-1"
        >
          , 
        </span>
        <span
          class="emotion-13 emotion-14"
        >
          ۲۷ می ۲۰۲۰
        </span>
      </strong>
    </div>
    <div
      class="emotion-22 emotion-19"
      dir="rtl"
    >
      <p
        class="emotion-20 emotion-21"
      >
        د بي بي سي پښتو ټلویزیوني خپرونه چې هره ورځ د افغانستان په شپږ بجو په ژوندۍ بڼه خپرېږي. دلته یې لیدلی شئ.
      </p>
    </div>
  </main>
  <div
    class="emotion-24 emotion-25 emotion-19"
    dir="rtl"
  >
    <div
      class="emotion-18 emotion-19"
      dir="rtl"
    />
  </div>
</div>
`;

exports[`should show the expired content message if episode is expired 1`] = `
.emotion-26 {
  width: 100%;
  padding-bottom: 2rem;
}

@supports (display:grid) {
  .emotion-26 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
}
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-26 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .emotion-26 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width:63rem) {
  .emotion-26 {
    width: 100%;
  }
}

@media (max-width:14.9375rem) {
  .emotion-19 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-19 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-19 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-19 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-19 {
    margin-right: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-19 {
    margin-right: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-19 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
}
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-17 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #F2F2F2;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-17 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-17 {
    font-size: 2.5rem;
    line-height: 3.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-17 {
    padding: 2.5rem 0;
  }
}

@media (max-width:62.9375rem) {
  .emotion-17 {
    padding: 0.5rem 0;
  }
}

@media (min-width:63rem) {
  .emotion-17 {
    padding: 1rem 0;
  }
}

.emotion-10 {
  display: inline-block;
  width: 100%;
  padding-bottom: 0.5rem;
  word-break: break-word;
}

@media (min-width:37.5rem) {
  .emotion-10 {
    padding-bottom: 0;
    word-break: break-word;
    line-height: 3.5rem;
  }
}

.emotion-14 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-14 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-14 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-23 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-23 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-23 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-23 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-23 {
    margin-right: 20%;
  }
}

@media (min-width:80rem) {
  .emotion-23 {
    margin-right: 40%;
  }
}

@supports (display:grid) {
  .emotion-23 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(10,1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
}
}

.emotion-21 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #F2F2F2;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-21 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-21 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (max-width:62.9375rem) {
  .emotion-21 {
    padding-bottom: 0.5rem;
  }
}

.emotion-8 {
  margin: 2.5rem 0 1.5rem;
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

@media (max-width:62.9375rem) {
  .emotion-8 {
    margin-top: 1rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-8 {
    margin: 1rem -1rem 0;
  }
}

@media (max-width:24.9375rem) {
  .emotion-8 {
    margin: 0.5rem -0.5rem 0;
  }
}

.emotion-6 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34,34,34,0.75);
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .emotion-4 {
    background-color: transparent;
  }
}

.emotion-2 {
  display: block;
  font-weight: normal;
  bottom: 0;
  position: absolute;
  padding: 0.5rem;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-2 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .emotion-2 {
    padding: 1rem;
  }
}

<div>
  <div>
    chartbeat
  </div>
  <noscript />
  <main
    class="emotion-25 emotion-26 emotion-20"
    dir="rtl"
    role="main"
  >
    <div
      class="emotion-19 emotion-20"
      dir="rtl"
    >
      <h1
        class="emotion-0 emotion-1"
        id="content"
        tabindex="-1"
      >
        نړۍ دا وخت, ۲۷ می ۲۰۲۰
      </h1>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <strong
              class="emotion-2 emotion-3"
            >
              دغه فایل نور د لاسرسي وړ نه دی.
            </strong>
          </div>
        </div>
      </div>
      <strong
        aria-hidden="true"
        class=" emotion-16 emotion-17 emotion-18"
      >
        <span
          class="emotion-10 emotion-11"
        >
          نړۍ دا وخت
        </span>
        <span
          class="emotion-0 emotion-1"
        >
          , 
        </span>
        <span
          class="emotion-14 emotion-15"
        >
          ۲۷ می ۲۰۲۰
        </span>
      </strong>
    </div>
    <div
      class="emotion-23 emotion-20"
      dir="rtl"
    >
      <p
        class="emotion-21 emotion-22"
      >
        د بي بي سي پښتو ټلویزیوني خپرونه چې هره ورځ د افغانستان په شپږ بجو په ژوندۍ بڼه خپرېږي. دلته یې لیدلی شئ.
      </p>
    </div>
  </main>
  <div
    class="emotion-25 emotion-26 emotion-20"
    dir="rtl"
  >
    <div
      class="emotion-19 emotion-20"
      dir="rtl"
    />
  </div>
</div>
`;

exports[`should show the future content message if episode is not yet available 1`] = `
.emotion-26 {
  width: 100%;
  padding-bottom: 2rem;
}

@supports (display:grid) {
  .emotion-26 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
}
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-26 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .emotion-26 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width:63rem) {
  .emotion-26 {
    width: 100%;
  }
}

@media (max-width:14.9375rem) {
  .emotion-19 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-19 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-19 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-19 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-19 {
    margin-right: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-19 {
    margin-right: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-19 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
}
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-17 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #F2F2F2;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-17 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-17 {
    font-size: 2.5rem;
    line-height: 3.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-17 {
    padding: 2.5rem 0;
  }
}

@media (max-width:62.9375rem) {
  .emotion-17 {
    padding: 0.5rem 0;
  }
}

@media (min-width:63rem) {
  .emotion-17 {
    padding: 1rem 0;
  }
}

.emotion-10 {
  display: inline-block;
  width: 100%;
  padding-bottom: 0.5rem;
  word-break: break-word;
}

@media (min-width:37.5rem) {
  .emotion-10 {
    padding-bottom: 0;
    word-break: break-word;
    line-height: 3.5rem;
  }
}

.emotion-14 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-14 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-14 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-23 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-23 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-23 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-23 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-23 {
    margin-right: 20%;
  }
}

@media (min-width:80rem) {
  .emotion-23 {
    margin-right: 40%;
  }
}

@supports (display:grid) {
  .emotion-23 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(10,1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
}
}

.emotion-21 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #F2F2F2;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-21 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-21 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (max-width:62.9375rem) {
  .emotion-21 {
    padding-bottom: 0.5rem;
  }
}

.emotion-8 {
  margin: 2.5rem 0 1.5rem;
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

@media (max-width:62.9375rem) {
  .emotion-8 {
    margin-top: 1rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-8 {
    margin: 1rem -1rem 0;
  }
}

@media (max-width:24.9375rem) {
  .emotion-8 {
    margin: 0.5rem -0.5rem 0;
  }
}

.emotion-6 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34,34,34,0.75);
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .emotion-4 {
    background-color: transparent;
  }
}

.emotion-2 {
  display: block;
  font-weight: normal;
  bottom: 0;
  position: absolute;
  padding: 0.5rem;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-2 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .emotion-2 {
    padding: 1rem;
  }
}

<div>
  <div>
    chartbeat
  </div>
  <noscript />
  <main
    class="emotion-25 emotion-26 emotion-20"
    dir="rtl"
    role="main"
  >
    <div
      class="emotion-19 emotion-20"
      dir="rtl"
    >
      <h1
        class="emotion-0 emotion-1"
        id="content"
        tabindex="-1"
      >
        نړۍ دا وخت, ۲۷ می ۲۰۲۰
      </h1>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <strong
              class="emotion-2 emotion-3"
            >
              دغه پروګرام د خپرولو لپاره چمتو نه دی.
            </strong>
          </div>
        </div>
      </div>
      <strong
        aria-hidden="true"
        class=" emotion-16 emotion-17 emotion-18"
      >
        <span
          class="emotion-10 emotion-11"
        >
          نړۍ دا وخت
        </span>
        <span
          class="emotion-0 emotion-1"
        >
          , 
        </span>
        <span
          class="emotion-14 emotion-15"
        >
          ۲۷ می ۲۰۲۰
        </span>
      </strong>
    </div>
    <div
      class="emotion-23 emotion-20"
      dir="rtl"
    >
      <p
        class="emotion-21 emotion-22"
      >
        د بي بي سي پښتو ټلویزیوني خپرونه چې هره ورځ د افغانستان په شپږ بجو په ژوندۍ بڼه خپرېږي. دلته یې لیدلی شئ.
      </p>
    </div>
  </main>
  <div
    class="emotion-25 emotion-26 emotion-20"
    dir="rtl"
  >
    <div
      class="emotion-19 emotion-20"
      dir="rtl"
    />
  </div>
</div>
`;

exports[`should show the future content message if episode is pending 1`] = `
.emotion-26 {
  width: 100%;
  padding-bottom: 2rem;
}

@supports (display:grid) {
  .emotion-26 {
    display: grid;
    position: initial;
  }

@media (max-width:14.9375rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(8,1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
}

@media (min-width:80rem) {
    .emotion-26 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(20,1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
}
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-26 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .emotion-26 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width:63rem) {
  .emotion-26 {
    width: 100%;
  }
}

@media (max-width:14.9375rem) {
  .emotion-19 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-19 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-19 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-19 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-19 {
    margin-right: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .emotion-19 {
    margin-right: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .emotion-19 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-19 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(12,1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
}
}

.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-17 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #F2F2F2;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-17 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-17 {
    font-size: 2.5rem;
    line-height: 3.375rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-17 {
    padding: 2.5rem 0;
  }
}

@media (max-width:62.9375rem) {
  .emotion-17 {
    padding: 0.5rem 0;
  }
}

@media (min-width:63rem) {
  .emotion-17 {
    padding: 1rem 0;
  }
}

.emotion-10 {
  display: inline-block;
  width: 100%;
  padding-bottom: 0.5rem;
  word-break: break-word;
}

@media (min-width:37.5rem) {
  .emotion-10 {
    padding-bottom: 0;
    word-break: break-word;
    line-height: 3.5rem;
  }
}

.emotion-14 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-14 {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-14 {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

@media (max-width:14.9375rem) {
  .emotion-23 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .emotion-23 {
    padding: 0 0.5rem;
    margin-right: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .emotion-23 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .emotion-23 {
    padding: 0 1rem;
    margin-right: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .emotion-23 {
    margin-right: 20%;
  }
}

@media (min-width:80rem) {
  .emotion-23 {
    margin-right: 40%;
  }
}

@supports (display:grid) {
  .emotion-23 {
    display: block;
  }

@media (max-width:14.9375rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(6,1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(5,1fr);
      grid-column-end: span 5;
      grid-column-start: 2;
    }
}

@media (min-width:80rem) {
    .emotion-23 {
      width: initial;
      margin: 0;
      grid-template-columns: repeat(10,1fr);
      grid-column-end: span 10;
      grid-column-start: 5;
    }
}
}

.emotion-21 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #F2F2F2;
  padding-bottom: 1.5rem;
  margin: 0;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .emotion-21 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .emotion-21 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (max-width:62.9375rem) {
  .emotion-21 {
    padding-bottom: 0.5rem;
  }
}

.emotion-8 {
  margin: 2.5rem 0 1.5rem;
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

@media (max-width:62.9375rem) {
  .emotion-8 {
    margin-top: 1rem;
  }
}

@media (max-width:37.4375rem) {
  .emotion-8 {
    margin: 1rem -1rem 0;
  }
}

@media (max-width:24.9375rem) {
  .emotion-8 {
    margin: 0.5rem -0.5rem 0;
  }
}

.emotion-6 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  font-family: "BBC Reith Qalam",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34,34,34,0.75);
}

@media (min-width:37.5rem) {
  .emotion-4 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .emotion-4 {
    background-color: transparent;
  }
}

.emotion-2 {
  display: block;
  font-weight: normal;
  bottom: 0;
  position: absolute;
  padding: 0.5rem;
}

@media screen and (-ms-high-contrast:active) {
  .emotion-2 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .emotion-2 {
    padding: 1rem;
  }
}

<div>
  <div>
    chartbeat
  </div>
  <noscript />
  <main
    class="emotion-25 emotion-26 emotion-20"
    dir="rtl"
    role="main"
  >
    <div
      class="emotion-19 emotion-20"
      dir="rtl"
    >
      <h1
        class="emotion-0 emotion-1"
        id="content"
        tabindex="-1"
      >
        نړۍ دا وخت, ۲۷ می ۲۰۲۰
      </h1>
      <div
        class="emotion-8 emotion-9"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <strong
              class="emotion-2 emotion-3"
            >
              دغه پروګرام د خپرولو لپاره چمتو نه دی.
            </strong>
          </div>
        </div>
      </div>
      <strong
        aria-hidden="true"
        class=" emotion-16 emotion-17 emotion-18"
      >
        <span
          class="emotion-10 emotion-11"
        >
          نړۍ دا وخت
        </span>
        <span
          class="emotion-0 emotion-1"
        >
          , 
        </span>
        <span
          class="emotion-14 emotion-15"
        >
          ۲۷ می ۲۰۲۰
        </span>
      </strong>
    </div>
    <div
      class="emotion-23 emotion-20"
      dir="rtl"
    >
      <p
        class="emotion-21 emotion-22"
      >
        د بي بي سي پښتو ټلویزیوني خپرونه چې هره ورځ د افغانستان په شپږ بجو په ژوندۍ بڼه خپرېږي. دلته یې لیدلی شئ.
      </p>
    </div>
  </main>
  <div
    class="emotion-25 emotion-26 emotion-20"
    dir="rtl"
  >
    <div
      class="emotion-19 emotion-20"
      dir="rtl"
    />
  </div>
</div>
`;
